All of major new material added to chapter 7.

--- a/07_conclusions/conclusions.tex
+++ b/07_conclusions/conclusions.tex
@@ -81,33 +81,28 @@ This method of visualisation is particularly useful for discussion of the parall
 	\item[3] Develop a parallel reality system suitable for deployment to real world user studies to effect comparison against previous categories of alternate reality.
 \end{enumerate}
 
-Initially it was thought that a rewarding parallel reality experience might be possible through leveraging an existing modality of alternate reality interaction, that of Situated Simulation (SitSim). The VTW project discussed in chapter \ref{chapter-vtw} investigated this possibility.
+Initially it was thought that a rewarding parallel reality experience might be possible through leveraging an existing modality of alternate reality interaction, that of Situated Simulation (SitSim), and the VTW project discussed in chapter \ref{chapter-vtw} investigated this possibility. Evaluation of the VTW platform uncovered two major shortcomings.
 
-Two major things wrong with it.
+The first was related to performance and was tied to the specification of the hardware and software platforms themselves, rather than being a result of any aspect of the parallel reality concept itself. The decision to make use of the Second Life/OpenSim software environment, in order to make use of existing virtual content without having to embark upon a lengthy conversion process, limited the choice of tablet computer upon which the platform could operate to the very small number (at the time) of x86 tablet computers. None of these had the graphical performance of today's popular Android and iOS tablets and combined with the fact that Second Life/OpenSim is not in any way optimised nor designed for mobile use and is slower even than other non mobile 3D engines due to the ephemeral nature of its content meant that graphical performance and quality were low.
 
-Firstly the modality of interaction did not encapsulate the style of interaction originally envisaged of the parallel reality concept, that of wholly switching between discrete real and virtual environments, due to the way in which the virtual was always seen as a small window surrounded by the larger and all encompassing real.
+The low performance and poor accessibility of the tablet's GPS and orientation sensing hardware also meant that a lengthy process of hardware prototyping and integration was required, and due to the limited control interfaces provided by the Second Life client it was necessary to embark upon a lengthy software development stage, resorting to adding low level serial I/O to the client. The observed performance of the position tracking obtained via the GPS receiver was then only sufficient to partially meet the requirements of the second of the three envisaged styles of interaction with parallel reality systems as discussed in section \ref{parallel-reality-in-virtual-heritage}.
 
-When SitSim was considered as a possible avenue through which parallel reality could manifest, the focus was upon the environmental aspect. It was not until testing the platform at St Andrews Cathedral that the importance of the experiential aspect become clear. This led to the explicit realisation and appreciation of these two aspects of the parallel reality concept, both of which needed to be realised in order for parallel reality to manifest in its originally envisaged splendour (see discussion in section \ref{real-world-experience-of-vtw}).
+The second shortcoming was that the modality of interaction offered by the platform did not encapsulate that which was originally envisaged of the parallel reality concept, of wholly switching between discrete real and virtual environments, due to the way in which the virtual was always seen as a small window surrounded by the larger and all encompassing real. When SitSim was being considered as a possible avenue through which parallel reality could manifest, the focus had been placed upon the environmental aspect, as the SitSim concept presented two complete and discrete environments, one real and the other virtual. It was not until testing the VTW platform at St Andrews Cathedral that the importance of the experiential aspect of the parallel reality concept also become clear. This led to the explicit realisation and appreciation of these two aspects of the parallel reality concept in section \ref{real-world-experience-of-vtw}, both of which needed to be realised in order for parallel reality to manifest in its originally envisaged manner.
 
-The performance of the VTW platform was also somewhat lacklustre, which limited its utility even ignoring the wrong modality. The decision to make use of the Second Life/OpenSim software environment, in order to make use of existing virtual content without having to embark upon a lengthy conversion process, limited the choice of tablet upon which the platform could operate to the very small number (at the time) of x86 tablet computers. None of these had the graphical performance of today's popular Android and iOS tablets and this combined with the fact that Second Life/OpenSim is not in any way optimised nor designed for mobile use and is slower even than other non mobile 3D engines due to the ephemeral nature of its content meant that graphical performance and quality were low.
+The recognition of these shortcomings highlighted the importance of the experiential aspect of parallel reality, as well as providing insight into performance requirements and best practices over what software/hardware environment to make use of, and this information was used to influence the design and development of the subsequent Mirrorshades parallel reality platform.
 
-The low performance and poor accessibility of the tablet's GPS and orientation sensing hardware also meant that a lengthy process of hardware prototyping and integration was required, and due to the limited control interfaces provided by the Second Life client it was necessary to embark upon a lengthy software development stage that went as far as to add serial I/O to the client.
-
-
-The development and evaluation of the VTW platform highlighted the importance of the experiential aspect of parallel reality, as well as providing insight into performance requirements and best practices over what software/hardware environment to make use of. And all of this led to the creation of the Mirrorshades platform.
-
-While the physical manifestation of the Mirrorshades platform is far less convenient and far more `research equipment' than VTW, due to the fact that it fills a satchel that must be worn by the user and also occupies both of their hands with equipment, it fully realised the envisaged experience of parallel reality and did so with higher graphical performance and quality along with higher orientation and position tracking quality thanks to the adoption of a more suitable software environment coupled with a new stereoscopic 3D HMD.
+While the physical manifestation of the Mirrorshades platform is less convenient and falls more into the category of `research equipment' than VTW, due to the fact that it fills a satchel that must be worn by the user and also occupies both of their hands with equipment, it fully realised the envisaged experience of parallel reality and did so with higher graphical performance and quality along with higher orientation and position tracking quality, thanks to the adoption of a more suitable software environment coupled with a new stereoscopic 3D HMD. Using this platform it was then possible to perform user studies assess the feasibility of the concept and begin to ascertain properties and qualities of parallel reality experiences that effects their utility and enjoyment.
 
 \begin{enumerate}	
 	\item[4] Identify and put into practice suitable assessment techniques to ascertain the merit of parallel reality in relation to previous categories of alternate reality.
 	\item[5] Identify aspects of the implementation of a parallel reality system that positively or negatively effect the user experience, along with assessment methodologies to ascertain these effects, putting these into practice within real world user studies.
 \end{enumerate}
 
-Here once again the inherently subjective nature of real and virtual space experience make such an assessment difficult. However with the utility of the combined Milgram/Waterworth model and the extended vacancy problem definition, a combination of both qualitative and quantitative results led to a number of interesting observations and discoveries.
+The inherently subjective nature of real and virtual space experience made such assessment techniques a challenge to decide upon. However with the utility of the combined Milgram/Waterworth model and the extended vacancy problem definition, a combination of both qualitative and quantitative techniques were identified that in combination would provide sufficient data to allow interesting observations and discoveries to be made.
 
-subjective and presence
+The notion of presence in relation to parallel reality experiences presented an interesting challenge for assessment, as the novel nature of a parallel reality experience in promoting interaction with two discrete environments rendered most popular presence questionnaires unsuitable. These questionnaires were written for assessment of traditionally realised virtual reality experiences, in which the user is immersed in a virtual environment at the intentional exclusion of all stimuli from the real world.
 
-The novel nature of a parallel reality experience, promoting the interaction with two discrete environments rather than with one mixed environment or only a virtual environment at the complete suppression of the real environment, led to an interesting challenge where no widely adopted presence questionnaire could be directly applied to the experiences. However by realising that the categorical design of the igroup presence questionnaire allowed the different aspect of a parallel reality system to be separated from more traditional VR experiences allowed it to be applied to this new category of alternate reality and served to reinforce with more quantitative values what was being observed in qualitative feedback.
+However by realising that the design of the igroup presence questionnaire and its 3 categories allowed the different aspect of a parallel reality experience when compared to a traditional VR experience to be isolated and assessed accordingly, it could be applied to the new category of alternate reality and served to reinforce in a more quantitative fashion what was being observed in some of the qualitative feedback.
 
 \begin{enumerate}
 	\item[6] Evaluate user studies to inform creation of best practise recommendations for future parallel reality endeavours.
@@ -115,66 +110,51 @@ The novel nature of a parallel reality experience, promoting the interaction wit
 
 As listed in section \ref{best-practices-for-parallel-reality} a number of best practices for future parallel reality endeavours were created.
 
-These best practices are presented as observations from an initial investigation into a new category of alternate reality. The small number of participants, their limited age range and the use of a single case study within the context of cultural heritage prevents any detailed, low level claims as to the best manners in which to implement particular features of a parallel reality system. But as initial evidence that justifies more detailed work, they hope to help direct the design and implementation of future parallel reality endeavours without presumptuously attempting to prescribe specifics of individual features for which sufficient data and observations are not yet available.
+These best practices are presented as observations from an initial investigation into a new category of alternate reality. The small number of participants, their limited age range and the use of a single case study within the context of cultural heritage prevents any detailed, low level claims being made into the best manners in which to implement particular features of a parallel reality system. But as initial evidence that justifies more detailed future work, they hope to help direct the design and implementation of future parallel reality endeavours without presumptuously attempting to prescribe specifics of individual features for which sufficient data and observations are not yet available.
 
-These best practices cover technology based aspects, such as the importance of intelligently choosing hardware and software environments to provide the best graphical quality as possible, aspects mitigating limitations of technology that are not as easy/possible to overcome, such as intelligently handling inaccuracies in position tracking, and the more subjective/experiential aspects relating to how implementation of transitions between real and virtual environments affect user experience, utility of the system and overall enjoyment.
-
-
-
-Critical analysis of the consequences and impact of the research
-
-
-
-Talk about the lot of hitherto unknown facts and preferences that have now been revealed
-
-
+These best practices cover technology based aspects, such as the importance of intelligently choosing hardware and software environments to provide the best graphical quality as possible, aspects mitigating limitations of technology that are not as easy/possible to overcome such as intelligently handling inaccuracies in position tracking, and more subjective/experiential aspects relating to how implementation of transitions between real and virtual environments affect user experience, utility of the system and overall enjoyment.
 
 %=========================================================================================================
 
 \section{Emergent Preference Toward RW/VR Mix}
 
-The style of interaction originally envisaged for a parallel reality system, and cemented by the conscious recognition of the divide between the environmental and experiential aspects of the parallel reality definition, was one of switching wholly between discrete real and virtual environments.
+The style of interaction originally envisaged for a parallel reality system was one of wholly switching between complete, discrete real and virtual environments, a scenario visualised upon the combined Milgram/Waterworth model in figure \ref{focus-locus-sensus-with-virtuality-continuum-with-transition}. After the experience of using the VTW platform fell short of this vision it was recognised in section \ref{real-world-experience-of-vtw} that the parallel reality definition could be considered as relying upon two aspects, the first focussing upon the provision of two complete environments, one real and the other virtual, and the second focussing on this experiential aspect of switching between the environments.
 
-The VTW platform did not allow this envisaged style of interaction to manifest, due largely to the manner in which the virtual environment only ever filled a small window of the user's viewport that otherwise contained purely real environment visuals.
+It was considered from the beginning that a scenario in which the user switches from a mixed real and virtual environment to a wholly virtual environment, as visualised in figure \ref{transition-mix-vr.png}, would be beneficial in terms of mitigating the effect of the extended vacancy problem. However it was not expected at that stage that users would come to prefer this mixed environment to the extent that they did in the user studies when compared to the wholly real and wholly virtual views.
 
-While the Mirrorshades platform allowed the envisaged style of interaction to manifest, the stage 2.1 evaluation indicated that users found the ability to view a mix of both real and virtual environments simultaneously to be enjoyable and useful. The stage 2.2 evaluation further supported these findings.
+While the Mirrorshades platform succeeded where the VTW platform did not by allowing the envisaged style of interaction to manifest, the stage 2.1 evaluation indicated that users found the ability to view a mix of both real and virtual environments to be arguably more enjoyable and useful than the envisaged switching behaviour. The stage 2.2 evaluation was then designed partly to further investigate this observation and its results supported the finding.
 
-
-At the very beginning of this thesis, in the introduction to chapter \ref{introduction}, the example scenario being described makes the following distinction:
-
-\begin{quote}
-	\textit{This is not an augmented reality system which superimposes virtual objects upon the real world.}
-\end{quote}
-
-And later when formally introducing parallel reality in section \ref{parallelrealityinbackground} is the following:
+At the very beginning of this thesis, in the introduction to chapter \ref{introduction}, the example scenario being described makes the following distinction about parallel reality:
 
 \begin{quote}
-	\textit{In this regard we further distinguish a parallel reality system from an augmented reality system by defining the former as allowing its user to switch between two different primary environments whereas the latter augments one particular primary environment.}
+	\textit{``This is not an augmented reality system which superimposes virtual objects upon the real world.''}
 \end{quote}
 
-lies in consideration of the environmental and experiential aspects identified in section \ref{real-world-experience-of-vtw}.
+And later when formally introducing parallel reality in section \ref{parallelrealityinbackground} this thesis explained:
 
-while the evaluations showed that a mixed view was preferred
+\begin{quote}
+	\textit{``In this regard we further distinguish a parallel reality system from an augmented reality system by defining the former as allowing its user to switch between two different primary environments whereas the latter augments one particular primary environment.''}
+\end{quote}
 
-and that mixed view alone would seem experientially very similar to previous AR systems
+With the emergent preference of users in the Mirrorshades parallel reality platform evaluations towards a mixed view, the novelty of parallel reality as a distinct category of alternate reality is definitely put into question, as the user experience of the Mirrorshades platform as used in this fashion is undeniably very similar to previous AR platforms.
 
-the distinction of the environmental aspect means that the user can additionally choose to view either complete, discrete environment wholly on its own at the complete exclusion of the other, something not possible with the traditional view of AR in which only individual virtual objects exist rather than an entire virtual environment
+However in reference to section \ref{real-world-experience-of-vtw} even though the experiential aspect of the parallel reality platform is difficult to distinguish from an AR platform in this scenario, the distinct environmental aspect of the parallel reality platform means that it can still be considered as a distinct concept due to the utility it provides to alter the experiential aspect away from a mixed view where this becomes desirable.
 
+The provision of a complete virtual environment means that the user of a parallel reality system who is viewing a RW/VR mix can at any time transition to seeing only RW or only VR, something that is not encapsulated by the popular definition and understanding of AR (see section \ref{summaryofalternaterealitydefinitions}) as being a single mixed environment created by the addition of some virtual objects to the real environment, where the virtual objects alone do not constitute an entire environment and rely upon their juxtaposition upon the real environment.
 
-thus as mentioned in section \ref{stage-2-2-summary} the ultimate realisation of a parallel reality system is indicated to be one that presents the mixed view that is essentially AR, but \textbf{additionally} allows transitions to wholly real and wholly virtual
+As mentioned in section \ref{stage-2-2-summary}, this observed preference toward a mixed view indicates that the ultimate realisation of the parallel reality concept may be one that provides the ability to view a RW/VR mix, possibly even as the default view, but which \textit{additionally} allows the user to transition into viewing purely RW and purely VR environments on their own at the complete exclusion of the other. One might want to consider this realisation of parallel reality as being an extreme case of AR, in which the quantity and coverage of the virtual objects surpasses that expected from the traditional understanding of the concept trending toward a point at which they do in fact constitute a complete virtual environment.
 
-the overall experience of such a system may not be as novel as the vision of parallel reality originally envisaged
+The predisposition toward continuums, rather than categories with discrete boundaries, when discussing the position of different categories of alternate reality in relationship with each other due to the inherently subjective and hazy nature of their limits, lends well to this observation, producing the idea of a categorisation system where an AR system with an increasing number and extent of virtual objects trends along a continuum toward being a parallel reality system, as shown by figure \ref{augmented-reality-parallel-reality-continuum.png}.
 
-however bowing to utility and enjoyment is important for the concept to have a future of fruitful applications
+\begin{figure}[h]
+	\begin{center}
+		\includegraphics[width=\textwidth]{augmented-reality-parallel-reality-continuum.png}
+		\caption{Continuum of increasing coverage of virtual objects in AR trending toward parallel reality.}
+		\label{augmented-reality-parallel-reality-continuum.png}
+	\end{center}	
+\end{figure}
 
-
-
-one might want to consider parallel reality to be an extreme case of augmented reality, in which the virtual augmentations are numerous and expansive enough to constitute a complete environment unto itself
-
-
-
-
-
+%talk about how the real made the virtual look more realistic, as being possible in parallel reality but not in AR
 
 %=========================================================================================================
 
