--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -75,7 +75,7 @@ Before taking part in the two scenarios, participants were given the opportunity
 %=========================================================================================================
 
 \subsection{Evaluation Techniques}
-
+\label{stage-1-evaluation-techniques}
 All participants completed a pre-task questionnaire which provided calibration for other data by enquiring about age, gender identity, previous experience with VR HMDs and whether they had previously visited St Salvtor's chapel, both RW and VR (the RW chapel is open to the public and a version of the VR reconstruction is publicly accessible via the OVW group's OpenSim grid\footnote{\url{http://openvirtualworlds.org}}). The System Usability Scale (SUS)~\cite{Brooke1996} was used to provide a basic comparison between the usability of the two scenarios, while a 12-item Likert-type questionnaire (included as appendix \ref{appendix-12-item-likert-type-questionnaire-stage-1}) was used to collect opinions on more specific aspects of the experience of both scenarios. At the end of the session, after completing both scenarios, participants were engaged in a short structured interview (prompts included as appendix \ref{appendix-interview-questions-stage-1}) in order to allow them to elaborate upon their experience in a more free form manner. The visuals displayed upon the DK1 were recorded via ShadowPlay and the participants themselves were recorded by video camera. Finally, log data were collected during both scenarios, capturing the information detailed in table \ref{logdatatable} to file at regular intervals for statistical processing and visualising via R.
 
 \newpage
@@ -566,7 +566,7 @@ While stage 1 of the evaluation focussed primarily upon assessing the feasibilit
 %=========================================================================================================
 
 \section{Evaluation Techniques}
-
+\label{stage-2-1-evaluation-techniques}
 As with the stage 1 evaluation a range of both qualitative and quantitative data were collected throughout both stage 2.1 and stage 2.2. Evaluating participants' preferences toward different styles of transitioning between RW and VR visual stimuli pertains to studying their reactions and responses to ascertain the effect upon their focus of attention, a concept that is largely psychological in nature (\textit{``Psychology is the physics of virtual reality''}\footnote{\url{ftp://ftp.hitl.washington.edu/pub/publications/papers/m-90-1.html}}) and highly subjective~\cite{Ijsselsteijn2001}. Subjective measures thus produced the bulk of the data for evaluation, however they were once again backed up by objective log data to support or contradict emerging relationships.
 
 Stage 2 participants completed the same pre-task questionnaire as stage 1 participants and Likert-type questionnaires that shared certain items with that from stage 1 were also used; the stage 2.1 participants completed a 12-item questionnaire (included as appendix \ref{appendix-12-item-likert-type-questionnaire-stage-2-1}), while stage 2.2 participants completed a 9-item questionnaire (included as appendix \ref{appendix-9-item-likert-type-questionnaire-stage-2-2}). The SUS questionnaire was not used, while post-task interviews (prompts included as appendices \ref{appendix-interview-questions-stage-2-1} and \ref{appendix-interview-questions-stage-2-2} for stages 2.1 and 2.2 respectively) and logging were present. ShadowPlay was used to record the visuals displayed upon the DK1 and video cameras were used to record the participants themselves. Additionally, all stage 2 participants also completed the igroup presence questionnaire (see section \ref{igroup-presence-questionnaire-explanation}).
