Ethical approval forms added to appendices.

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -23,7 +23,7 @@ This chapter recounts the first of two stages of evaluation conducted with the M
 
 
 
-Participants were sourced by adverts disseminated via an internal university memo system which sends email to all registered staff and students each week. The advert appeared for several consecutive weeks. Participants were invited to take part in a \textit{``virtual reality study \ldots\ investigating different ways of switching your view between your real surroundings and a virtual environment''}. Participation was incentivised by a prize draw to win Amazon vouchers. This approach was adopted instead of sourcing participants from within the OVW group and wider (computer science) department as participants with a heightened knowledge and/or interest in the technology underlying the platform were expected to skew results by paying conscious attention to the system and its implementation, rather than the actual experience of using it. User studies each lasted 20-30 minutes and took place at St Salvator's chapel during afternoon hours while the chapel was open to the general public.
+Participants were sourced by adverts disseminated via an internal university memo system which sends email to all registered staff and students each week. The advert appeared for several consecutive weeks. Participants were invited to take part in a \textit{``virtual reality study \ldots\ investigating different ways of switching your view between your real surroundings and a virtual environment''}. Participation was incentivised by a prize draw to win Amazon vouchers. This approach was adopted instead of sourcing participants from within the OVW group and wider (computer science) department as participants with a heightened knowledge and/or interest in the technology underlying the platform were expected to skew results by paying conscious attention to the system and its implementation, rather than the actual experience of using it. User studies each lasted 20-30 minutes and took place at St Salvator's chapel during afternoon hours while the chapel was open to the general public. Ethical approval for all stages of the evaluation is included as appendix \ref{appendix-ethics}.
 
 %In total 17 participants, 10x male and 7x female, with a mean age of 23.1 years and a standard deviation of 4.9 years,
 
