--- a/thesis.tex
+++ b/thesis.tex
@@ -278,6 +278,10 @@
 \input{appendices/appendix-secondlife-haversine.tex}
 \label{appendix-secondlife-haversine}
 
+\chapter{Ethical Approval}
+\includepdf[pages={1-2}]{appendices/ethics.pdf}
+\label{appendix-ethics}
+
 \chapter{Stage 1 Evaluation 12-item Likert-type Questionnaire}
 \includepdf[pages={1}]{06_mirrorshades_studies_results/PDFs/12-item-likert-type-questionnaire-stage-1.pdf}
 \label{appendix-12-item-likert-type-questionnaire-stage-1}
